# Data-Mining

./: .gitignore  README.md  a-priori.py  pyproject.toml  reservoir_sampling.py  streaming_triangles.py
homework_1/: README.md  data_prep.py  imdb_tests.py  report.md  test_documents.pickle  tests.py  text_similarity.py  utils.py
homework_1/emails/: email-0.txt  email-1.txt  email-10.txt  email-100.txt  email-1000.txt  email-1001.txt  email-1002.txt  email-1004.txt  email-1005.txt  email-1007.txt  email-1009.txt  email-101.txt  email-1010.txt  email-1011.txt  email-1014.txt  email-1015.txt  email-1016.txt  email-1017.txt  email-1018.txt  email-102.txt  email-1020.txt  email-1021.txt  email-1022.txt  email-1023.txt  email-1024.txt  email-1025.txt  email-1026.txt  email-1027.txt  email-1028.txt  email-1029.txt  email-103.txt  email-1031.txt  email-1033.txt  email-1034.txt  email-1035.txt  email-1036.txt  email-1039.txt  email-104.txt  email-1040.txt  email-1041.txt  (+3371 more)
homework_1/emails2/: email-2931.txt  email-2952.txt  email-3374.txt  email-3480.txt  email-3494.txt  email-946.txt
homework_2/: README.md  a-priori-v2.py  a-priori.py  utils.py
homework_3/: README.md  facit.py  facit_reservoir_sampling.py  reservoir_sampling.py  streaming_triangles.py  streaming_triangles_v2.py  streaming_triangles_v3.py  toy_graph.txt  unit_test.py
homework_4/: README.md  main.py
